44.8 Парсинг